@@ -361,6 +361,16 @@ WPCS_SOUNDROM22x("hd_u18.rom",CRC(810d98c0) SHA1(8080cbbe0f346020b2b2b8e97015dbb
 		 "hd_u15.rom",CRC(e7870938) SHA1(b4f28146a5e7baa8522db65b41311afaf49604c6))
 WPC_ROMEND
 
+WPC_ROMSTART(hd,l2,"harly_l2.rom",0x020000,CRC(8b8b19ac) SHA1(5edba59e3260e33dc2ce65274a1ed8d7413e472a))
+WPCS_SOUNDROM22x("hd_u18.rom",CRC(810d98c0) SHA1(8080cbbe0f346020b2b2b8e97015dbb615dbadb3),
+		 "hd_u15.rom",CRC(e7870938) SHA1(b4f28146a5e7baa8522db65b41311afaf49604c6))
+WPC_ROMEND
+
+WPC_ROMSTART(hd,d2,"harly_d2.rom",0x020000,CRC(e67b0908) SHA1(2047098eed096a10c3e37e17be9216783120b7f7))
+WPCS_SOUNDROM22x("hd_u18.rom",CRC(810d98c0) SHA1(8080cbbe0f346020b2b2b8e97015dbb615dbadb3),
+		 "hd_u15.rom",CRC(e7870938) SHA1(b4f28146a5e7baa8522db65b41311afaf49604c6))
+WPC_ROMEND
+
 WPC_ROMSTART(hd,l1,"u6-l1.rom",0x020000,CRC(a0bdcfbf) SHA1(f906ffa2d4d04e87225bf711a07dd3bee1655a40))
 WPCS_SOUNDROM22x("u18-sp1.rom",CRC(708aa419) SHA1(cfc2692fb3bcbacceb85021e282bfbc8dcdf8fcc),
 		 "hd_u15.rom",CRC(e7870938) SHA1(b4f28146a5e7baa8522db65b41311afaf49604c6))
@@ -382,6 +392,8 @@ MACHINE_DRIVER_END
 
 CORE_GAMEDEF(hd,l3,"Harley Davidson (L-3)",1991,"Bally", hd, 0)
 CORE_CLONEDEF(hd,d3,l3,"Harley Davidson (D-3 LED Ghost Fix)",1991,"Bally", hd, 0)
+CORE_CLONEDEF(hd,l2,l3,"Harley Davidson (L-2)",1991,"Bally", hd, 0)
+CORE_CLONEDEF(hd,d2,l3,"Harley Davidson (D-2 LED Ghost Fix)",1991,"Bally", hd, 0)
 CORE_CLONEDEF(hd,l1,l3,"Harley Davidson (L-1)",1991,"Bally", hd, 0)
 CORE_CLONEDEF(hd,d1,l3,"Harley Davidson (D-1 LED Ghost Fix)",1991,"Bally", hd, 0)
 
